List item overflow fixed

--- a/client/app/styles/Blockees.less
+++ b/client/app/styles/Blockees.less
@@ -20,6 +20,11 @@
 			border-bottom: none;
 			margin-bottom: 1.5em;
 		}
+		.listItemText {
+			width: @blockeesWidth - 80px;
+			padding-left: 47px;
+			overflow: hidden;
+		}
 		button {
 			color: @grey;
 			float: right;
